Agregue unas descripciones

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>IdeaApp</h1>
+    <h2>Esta es la idea que por azar generó la inteligencia artificial.</h2>
     <div class="container">
         <div>
             <p id="genera">
